--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,6 +7,7 @@
       "@common/*": ["common/*"],
       "@components/*": ["components/*"],
       "@layout/*": ["layout/*"],
+      "@hooks/*": ["hooks/*"],
     },
   }
 }
