--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,6 +8,7 @@
       "@components/*": ["components/*"],
       "@layout/*": ["layout/*"],
       "@hooks/*": ["hooks/*"],
+      "@services/*": ["services/*"],
     },
   }
 }
